# remote_shutdown

./: Cargo.toml  README.md  config.ini  set_as_service.ps1  set_as_service.sh
.github/workflows/: rust.yml
src/: main.rs
