[package]
name = "remote_shutdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
configparser = "3.0.4"
system_shutdown = "4.0.1"
tokio = {version = "1.37.0", features = ["full"]}
